Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-7127771
(macosx)test/java/net/Socket/TrafficClass.java fails on Mac OS X
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
7u4
Affects Version/s:
7u4
Component/s:
core-libs
Labels:
8-na
jdk7u-osx
macosx-port
Subcomponent:
java.net
Resolved In Build:
b11
CPU:
x86
OS:
os_x
Verification:
Verified
Description
test/java/net/Socket/TrafficClass.java fails on Mac OS X with java.net.SocketException: Invalid Argument
Attachments
Activity
People
Assignee:
Kurchi Subhra Hazra
Reporter:
Kurchi Subhra Hazra
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
2012-01-06 10:33
Updated:
2012-03-26 12:22
Resolved:
2012-03-26 12:22
Imported:
16/Sep/12 1:01 AM
Indexed:
17/Jul/12 9:06 PM