7127771: (macosx)test/java/net/Socket/TrafficClass.java fails on Mac OS X Reviewed-by: michaelm, alanb, phh